6800586: -XX:+PrintGCDateStamps is using mt-unsafe localtime function

Replaced localtime() with localtime_r() on Solaris and Linux.

Reviewed-by: apetrusenko, dholmes, jmasa